--- a/frontend-react/src/styles/main.css
+++ b/frontend-react/src/styles/main.css
@@ -614,4 +614,32 @@ html {
 
 .searchFocus {
   background-color: var(--primaryC);
+}
+
+.photoOverlayWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index: 2;
+}
+.photoOverlayWrapper .photoOverlay {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.3em;
+  max-width: var(--maxWidth);
+  background-color: var(--backgroundShadeC);
+}
+.photoOverlayWrapper video {
+  border-radius: 0.3em;
+  position: relative;
+  height: 100%;
+  width: 100%;
 }/*# sourceMappingURL=main.css.map */
