--- a/frontend-react/src/styles/main.scss
+++ b/frontend-react/src/styles/main.scss
@@ -665,4 +665,27 @@ html{
     background-color: var(--primaryC);
 }
 
+.photoOverlayWrapper{
+    @include flexOAJ(column, center , center);
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    z-index: 2;
 
+    .photoOverlay{ 
+        @include flexOAJ(column, center, center);
+        @include roundedCorners(false);
+        max-width: var(--maxWidth);
+        
+        background-color: var(--backgroundShadeC);
+    }
+    
+    video{
+        @include roundedCorners(false);
+        position:relative;
+        height: 100%;
+        width: 100%;
+    }
+}
