--- a/frontend-react/src/styles/main.css
+++ b/frontend-react/src/styles/main.css
@@ -44,6 +44,8 @@ Old Colors:
   --maxWidth: 400px;
   --menuWidth: 40%;
   --heightTitlebar: 5em;
+  --toneDown: 90%;
+  --frameVisible: "0.1em";
 }
 
 @font-face {
@@ -100,13 +102,16 @@ html {
   align-items: flex-start;
   justify-content: flex-start;
   flex-grow: 1;
-  -ms-overflow-style: none; /* for Internet Explorer, Edge */
-  scrollbar-width: none; /* for Firefox */
+  -ms-overflow-style: none;
+  /* for Internet Explorer, Edge */
+  scrollbar-width: none;
+  /* for Firefox */
   overflow-y: scroll;
   overflow-x: hidden;
 }
 .chatBox::-webkit-scrollbar {
-  display: none; /* for Chrome, Safari, and Opera */
+  display: none;
+  /* for Chrome, Safari, and Opera */
 }
 .chatBox .wrapper {
   display: flex;
@@ -191,8 +196,40 @@ html {
   flex-direction: column;
   align-items: stretch;
   justify-content: flex-start;
+  font-family: Outfit;
+  font-weight: 400;
+  font-size: var(--inputSize);
+  color: var(--textC);
   background-color: var(--backgroundC);
   width: 100%;
+}
+.footer .emojiWrapper {
+  margin: 0;
+  padding-bottom: 0;
+  padding-top: 1em;
+  margin-left: 1em;
+  margin-right: 1em;
+  border-bottom: 0.1em var(--backgroundShadeC) solid;
+}
+.footer .emojiWrapper .emojiContainer {
+  -ms-overflow-style: none;
+  /* for Internet Explorer, Edge */
+  scrollbar-width: none;
+  /* for Firefox */
+  height: 8em;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+.footer .emojiWrapper .emojiContainer::-webkit-scrollbar {
+  display: none;
+  /* for Chrome, Safari, and Opera */
+}
+.footer .emojiWrapper label {
+  padding: 0.2em;
+}
+.footer .emojiWrapper label:hover {
+  background-color: var(--backgroundShadeC);
+  border-radius: 50%;
 }
 .footer .messageWrapper {
   display: flex;
@@ -279,41 +316,104 @@ html {
   justify-content: flex-end;
 }
 
-.menu {
+.menuWrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+  -webkit-backdrop-filter: brightness(var(--toneDown));
+          backdrop-filter: brightness(var(--toneDown));
   position: fixed;
-  top: calc(var(--heightTitlebar) * 1.4);
-  height: 15em;
-  width: var(--menuWidth);
-  left: var(--menuWidth);
-  transition: left 0.2s linear;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+}
+.menuWrapper .menu {
+  border-radius: 0.3em;
+  margin-left: var(--lightIndent);
+  margin-right: var(--lightIndent);
+  width: var(--lightIndentRemainder);
   font-family: Outfit;
-  font-weight: 600;
-  font-size: var(--textSize);
+  font-weight: 400;
+  font-size: var(--inputSize);
   color: var(--textC);
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch;
   justify-content: flex-start;
   box-shadow: 0 0 0.5em var(--backgroundShadeC);
-  border-radius: 0.3em;
+  max-width: calc(var(--maxWidth) - 2em);
+  position: relative;
+  z-index: 3;
+  margin-top: calc(var(--titleSize) * 3);
+  border: var(--frameVisible) var(--textShadeC) solid;
   background-color: var(--backgroundC);
 }
-.menu .menuItem {
+.menuWrapper .menu .menuItem {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  height: 3em;
+  margin-left: 1em;
+  margin-right: 1em;
+  border-bottom: 0.1em var(--backgroundShadeC) solid;
+}
+.menuWrapper .menu .menuItem label {
+  flex-grow: 1;
+}
+.menuWrapper .menu .menuItem button {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   border-radius: 0.3em;
+  height: 2.2em;
+  width: 2.2em;
+  margin-right: 0.2em;
+  border-width: 0;
+  background-color: var(--backgroundC);
   color: var(--textC);
-  font-size: var(--listItemSize);
-  padding: 1em;
 }
-.menu .menuItem:hover {
-  cursor: pointer;
+.menuWrapper .menu .menuItem button img {
+  height: 100%;
+  width: 100%;
 }
-
-.menuNew {
-  position: fixed;
-  top: 6em;
-  left: 6em;
-  width: 6em;
-  height: 6em;
+.menuWrapper .menu .menuItem button:hover {
+  background-color: var(--backgroundShadeC);
+}
+.menuWrapper .menu .menuDivider {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 0.1em var(--textShadeC) solid;
+  margin-left: 1em;
+  margin-right: 1em;
+  width: calc(100% - 2em);
+}
+.menuWrapper .menu .menuDivider img {
+  width: 1em;
+  height: 1em;
+}
+.menuWrapper .menu .menuDivider label {
+  font-family: Outfit;
+  font-weight: 400;
+  font-size: var(--smallSize);
+  color: var(--textC);
+  color: var(--textC);
+  flex-grow: 1;
+  margin-left: 1em;
+}
+.menuWrapper .menu .buttonWrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: center;
+}
+.menuWrapper .menu .buttonWrapper .reset {
+  font-size: var(--textSize);
 }
 
 .breakButton {
@@ -515,7 +615,8 @@ html {
 }
 .backButtonWrapper .backPopup {
   position: fixed;
-  z-index: 1; /*stay on top*/
+  z-index: 1;
+  /*stay on top*/
   height: 8em;
   width: 20em;
   top: 10em;
@@ -541,43 +642,63 @@ html {
   display: none;
 }
 
-.searchField {
-  border-radius: 0.3em;
-  box-shadow: 0 0 0.5em var(--backgroundShadeC);
+.searchOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  height: 15vh;
+  width: 100vw;
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
   justify-content: center;
+}
+.searchOverlay .searchWrapper {
   font-family: Outfit;
   font-weight: 400;
   font-size: var(--inputSize);
   color: var(--textC);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  border-radius: 0.3em;
+  box-shadow: 0 0 0.5em var(--backgroundShadeC);
   position: fixed;
-  height: 2em;
-  left: calc(50vw - var(--maxWidth) / 2 + 5vw);
-  top: calc(var(--heightTitlebar) + 1em);
-  width: calc(var(--maxWidth) - 10vw);
-  background-color: var(--backgroundC);
   z-index: 1;
+  left: calc(50vw - var(--maxWidth) / 2 + 5vw);
+  top: 3.5em;
+  width: 90%;
+  max-width: calc(var(--maxWidth) - 10vw);
+  background-color: var(--backgroundC);
 }
-.searchField img {
+.searchOverlay .searchWrapper .searchField {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  height: 2em;
+  width: 100%;
+}
+.searchOverlay .searchWrapper .searchField img {
   height: 100%;
   width: 100%;
 }
-.searchField button {
+.searchOverlay .searchWrapper .searchField button {
   width: 2.5em;
   height: 2.5em;
   background: transparent;
   border: 0;
 }
-.searchField button img {
+.searchOverlay .searchWrapper .searchField button img {
   height: 100%;
   width: 100%;
 }
-.searchField button:disabled {
+.searchOverlay .searchWrapper .searchField button:disabled {
   display: none;
 }
-.searchField button {
+.searchOverlay .searchWrapper .searchField button {
   border-radius: 0.3em;
   display: flex;
   flex-direction: row;
@@ -589,27 +710,33 @@ html {
   width: 2.5em;
   margin-top: 0;
 }
-.searchField button:hover {
+.searchOverlay .searchWrapper .searchField button:hover {
   background-color: var(--backgroundShadeC);
 }
-.searchField button img {
+.searchOverlay .searchWrapper .searchField button img {
   height: 1.5em;
   width: 1.5em;
 }
-.searchField input {
+.searchOverlay .searchWrapper .searchField input {
   flex-grow: 1;
   border: none;
 }
-.searchField input:focus {
+.searchOverlay .searchWrapper .searchField input:focus {
   outline-width: 0;
 }
-
-.filterField {
-  position: fixed;
-  z-index: 1;
-  max-width: 500px;
-  left: 15em;
-  top: 20em;
+.searchOverlay .searchWrapper .filterField {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  height: 2em;
+  width: 100%;
+  margin-left: 0.8em;
+  margin-right: 0.8em;
+  border-top: 0.1em var(--backgroundShadeC) solid;
+}
+.searchOverlay .searchWrapper .filterField label {
+  margin-right: 0.5em;
 }
 
 .searchFocus {
