--- a/frontend-react/src/styles/main.css
+++ b/frontend-react/src/styles/main.css
@@ -8,18 +8,6 @@ secondary color: #367d89
 light text: #c3c8cb
 
 */
-/*
-Old Colors:
-
-    primaryColor : #159A9C;
-    secondaryColor : #B4BEC9;
-
-    primaryLight : #FFFFFF;
-    secondaryLight : #DEEFE7;
-
-    primaryDark :  #002333;
-
-*/
 * {
   margin: 0;
   padding: 0;
@@ -36,9 +24,9 @@ Old Colors:
   --primaryC: #5bc9bb;
   --primaryShadeC: #e9ebea;
   --backgroundC: #FFFFFF;
-  --backgroundShadeC: #fafafa;
+  --backgroundShadeC: #f5f5f5;
   --textC: #090909;
-  --textShadeC: #c3c8cb;
+  --textShadeC: #848e94;
   --lightIndent: 4%;
   --lightIndentRemainder: calc(100% - 2* var(--lightIndent));
   --maxWidth: 400px;
@@ -73,7 +61,7 @@ html {
 }
 
 .mainContainer {
-  box-shadow: 0 0 0.5em var(--backgroundShadeC);
+  box-shadow: 0 0 0.7em var(--backgroundShadeC);
   display: flex;
   flex-direction: column;
   align-items: stretch;
@@ -122,6 +110,20 @@ html {
 }
 .chatBox .self {
   align-items: flex-end;
+  color: var(--backgroundC);
+}
+.chatBox .self div {
+  box-shadow: 0 0 0.7em var(--backgroundShadeC);
+  background-color: var(--primaryC);
+}
+.chatBox .self div .text {
+  color: var(--backgroundC);
+}
+.chatBox .self div .name {
+  color: var(--backgroundC);
+}
+.chatBox .self div .time {
+  color: var(--backgroundShadeC);
 }
 .chatBox .self .time {
   align-items: flex-end;
@@ -156,10 +158,10 @@ html {
 }
 .chatBox .messageCard .time {
   font-family: Outfit;
-  font-weight: 700;
+  font-weight: 400;
   font-size: var(--smallSize);
   color: var(--textC);
-  color: var(--primaryShadeC);
+  color: var(--textShadeC);
 }
 .chatBox .messageCard img {
   border-radius: 0.3em;
@@ -191,7 +193,7 @@ html {
 }
 
 .footer {
-  box-shadow: 0 0 0.5em var(--backgroundShadeC);
+  box-shadow: 0 0 0.7em var(--backgroundShadeC);
   display: flex;
   flex-direction: column;
   align-items: stretch;
@@ -252,6 +254,8 @@ html {
   font-family: Outfit;
   font-weight: 400;
   font-size: var(--inputSize);
+  color: var(--textC);
+  background-color: var(--backgroundC);
   color: var(--textC);
   flex-grow: 1;
   overflow-y: hidden;
@@ -342,7 +346,7 @@ html {
   flex-direction: column;
   align-items: stretch;
   justify-content: flex-start;
-  box-shadow: 0 0 0.5em var(--backgroundShadeC);
+  box-shadow: 0 0 0.7em var(--backgroundShadeC);
   max-width: calc(var(--maxWidth) - 2em);
   position: relative;
   z-index: 3;
@@ -382,6 +386,9 @@ html {
 }
 .menuWrapper .menu .menuItem button:hover {
   background-color: var(--backgroundShadeC);
+}
+.menuWrapper .menu .menuItem:last-child {
+  border: 0;
 }
 .menuWrapper .menu .menuDivider {
   display: flex;
@@ -435,6 +442,9 @@ html {
 .breakButton:hover {
   background-color: var(--backgroundC);
   color: var(--textC);
+}
+.breakButton:hover {
+  box-shadow: 0 0 0.7em var(--backgroundShadeC);
 }
 
 .firstPrio {
@@ -595,32 +605,84 @@ html {
   margin-top: 3em;
 }
 
+.errMsgWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  background-color: var(--backgroundC);
+}
 .errMsgWrapper .errMsg {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
   border-radius: 0.3em;
+  background-color: var(--textC);
+  width: 70%;
+  padding: 0.2em;
+  padding-left: 1em;
+  padding-right: 1em;
+}
+.errMsgWrapper .errMsg label {
   font-family: Outfit;
   font-weight: 400;
   font-size: var(--inputSize);
   color: var(--textC);
   color: var(--backgroundC);
-  background-color: var(--textC);
-  margin-bottom: 0.4em;
-  padding: 1em;
+}
+.errMsgWrapper .errMsg button {
+  background: transparent;
+  border-width: 0;
+  height: 1.8em;
+  width: 1.8em;
+}
+.errMsgWrapper .errMsg button:hover {
+  cursor: pointer;
+}
+.errMsgWrapper .errMsg button img {
+  height: 100%;
+  width: 100%;
 }
 .errMsgWrapper button {
   cursor: pointer;
 }
 
-.backButtonWrapper {
-  position: relative;
-}
-.backButtonWrapper .backPopup {
+.backButtonPopupWrapper {
   position: fixed;
-  z-index: 1;
-  /*stay on top*/
-  height: 8em;
-  width: 20em;
-  top: 10em;
-  left: 10em;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  -webkit-backdrop-filter: brightness(var(--toneDown));
+          backdrop-filter: brightness(var(--toneDown));
+}
+.backButtonPopupWrapper .backPopup {
+  font-family: Outfit;
+  font-weight: 400;
+  font-size: var(--textSize);
+  color: var(--textC);
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: center;
+  border-radius: 0.3em;
+  margin-left: var(--lightIndent);
+  margin-right: var(--lightIndent);
+  width: var(--lightIndentRemainder);
+  box-shadow: 0 0 0.7em var(--backgroundShadeC);
+  max-width: calc(var(--maxWidth) - 4em);
+  position: relative;
+  z-index: 3;
+  border: var(--frameVisible) var(--textShadeC) solid;
+  margin: 1em;
+  padding: 1em;
+  background-color: var(--backgroundC);
 }
 
 .titleButton {
@@ -664,7 +726,7 @@ html {
   align-items: flex-start;
   justify-content: center;
   border-radius: 0.3em;
-  box-shadow: 0 0 0.5em var(--backgroundShadeC);
+  box-shadow: 0 0 0.7em var(--backgroundShadeC);
   position: fixed;
   z-index: 1;
   left: calc(50vw - var(--maxWidth) / 2 + 5vw);
@@ -764,17 +826,57 @@ html {
   align-items: center;
   justify-content: flex-end;
   border-radius: 0.3em;
+  box-shadow: 0 0 0.7em var(--backgroundShadeC);
   max-width: var(--maxWidth);
   background-color: var(--backgroundShadeC);
 }
 .photoOverlayWrapper .photoOverlay .breakButtonWrapper {
   position: absolute;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+}
+.photoOverlayWrapper .photoOverlay .breakButtonWrapper .photoHeader {
+  display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  max-width: var(--maxWidth);
+}
+.photoOverlayWrapper .photoOverlay .breakButtonWrapper .photoFooter {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+.photoOverlayWrapper .photoOverlay .breakButtonWrapper .photoFooter .shutter {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  justify-content: center;
+  opacity: 70%;
+  margin: 2em;
+  border-radius: 50%;
+  border: 0.1em var(--backgroundC) solid;
+  width: 3em;
+  height: 3em;
+}
+.photoOverlayWrapper .photoOverlay .breakButtonWrapper .photoFooter .shutter .innerShutter {
+  background-color: var(--backgroundC);
+  flex-grow: 1;
+  border-radius: 50%;
+  margin: 0.2em;
+}
+.photoOverlayWrapper .photoOverlay .breakButtonWrapper .photoFooter .shutter .innerShutter:hover {
+  background-color: var(--primaryC);
+}
+.photoOverlayWrapper .photoOverlay .breakButtonWrapper .photoFooter .sendPhotoButton {
+  opacity: 100%;
+  background-color: var(--primaryC);
 }
 .photoOverlayWrapper .photoOverlay button {
   background-color: var(--backgroundC);
